# ebay-mcp

./: .env.example  .gitignore  .mcp.json  README.md  pyproject.toml
src/ebay_mcp/: __init__.py  __main__.py  analysis.py  auth.py  cli.py  client.py  config.py  errors.py  models.py  server.py
tests/: conftest.py  test_analysis.py  test_auth.py  test_client.py  test_config.py  test_models.py
