[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ebay-mcp"
version = "0.1.0"
description = "Expose eBay marketplace data to Claude over the Model Context Protocol: product search, price analysis, deal discovery, and market research."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Luke Nielsen", email = "luke.nielsen@radiusgroup.us" }]
keywords = [
    "ebay",
    "mcp",
    "marketplace",
    "price-analysis",
    "claude",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/luke-nielsen/ebay-mcp"
Repository = "https://github.com/luke-nielsen/ebay-mcp"

[project.scripts]
ebay-mcp = "ebay_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ebay_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
